# heligeom_webserver

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CHANGELOG.md  Pipfile  README.rst  codemeta.json  config.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: build_test.yml
heligeom/: __init__.py  forms.py  models.py  tool.py  utils.py  views.py
heligeom/static/css/: LiteMol-plugin.css  style.css
heligeom/static/js/: init.js  litemol.js
heligeom/templates/: 404.html  500.html  about.html  base.html  contact.html  error.html  examples.html  footer.html  help.html  index.html  navbar.html  pdbe_molstar.html  results.html  results_2_oligomers.html  run.html
heligeom/templates/chunks/: monomer_card.html
heligeom/templates/macros/: forms.html  results.html
heligeom/templates/partial/: loading.html
tests/: conftest.py  test_models.py  test_pages.py
