[project]
name = "Heligeom-Webserver"
version = "1.1.0"
description = "A web tool for characterizing, manipulating and assembling protein structural units."
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.11"
dependencies = [
    "flask",
    "sqlalchemy",
    "flask-wtf",
    "flask-sqlalchemy",
    "flask-cors",
    "numpy",
    "scipy",
]


[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"



[tool.ruff]
src = ["heligeom"]
output-format = "full"
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]
